{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 68,
  "lineage": "062c9419-55d1-25cf-3b56-15681571b663",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rancher-master-01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:903866160115:instance/i-0e65dd2981845e739",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e65dd2981845e739",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "rodrigofrsppk",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-056e1d431c490b01b",
            "private_dns": "ip-172-31-86-220.ec2.internal",
            "private_ip": "172.31.86.220",
            "public_dns": "ec2-52-205-206-218.compute-1.amazonaws.com",
            "public_ip": "52.205.206.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08ee968365d7fa1c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_k8s",
              "sg_k8s_id"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2f730f0e",
            "tags": {
              "Ambiente": "PROD",
              "CR": "XXXXXXXXXXXXXX",
              "Funcao": "K8s Master",
              "Name": "k8s-master-01",
              "Onwer": "xxxxxx",
              "Projeto": "Plataforma Rancher"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-082892a15205298a9",
              "sg-0d45b808cf220a7f1"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-rancher",
            "aws_security_group.sg-rancher-id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rancher-worker-01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:903866160115:instance/i-000bc78aba27d1dda",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-000bc78aba27d1dda",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "rodrigofrsppk",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a22ebe657a9d4f9e",
            "private_dns": "ip-172-31-89-141.ec2.internal",
            "private_ip": "172.31.89.141",
            "public_dns": "ec2-3-89-9-238.compute-1.amazonaws.com",
            "public_ip": "3.89.9.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07542dddbad8a89c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_k8s",
              "sg_k8s_id"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2f730f0e",
            "tags": {
              "Ambiente": "PROD",
              "CR": "XXXXXXXXXXXXXX",
              "Funcao": "K8s Worker",
              "Name": "k8s-worker-01",
              "Onwer": "xxxxxx",
              "Projeto": "Plataforma Rancher"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-082892a15205298a9",
              "sg-0d45b808cf220a7f1"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-rancher",
            "aws_security_group.sg-rancher-id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rancher-worker-02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:903866160115:instance/i-0d80e54e31b4ef3ab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d80e54e31b4ef3ab",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "rodrigofrsppk",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f0cd887e1b306ae8",
            "private_dns": "ip-172-31-87-9.ec2.internal",
            "private_ip": "172.31.87.9",
            "public_dns": "ec2-35-174-168-12.compute-1.amazonaws.com",
            "public_ip": "35.174.168.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e3ff0b1fe56e3ee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_k8s",
              "sg_k8s_id"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2f730f0e",
            "tags": {
              "Ambiente": "PROD",
              "CR": "XXXXXXXXXXXXXX",
              "Funcao": "K8s Worker",
              "Name": "k8s-worker-02",
              "Onwer": "xxxxxx",
              "Projeto": "Plataforma Rancher"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-082892a15205298a9",
              "sg-0d45b808cf220a7f1"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-rancher",
            "aws_security_group.sg-rancher-id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-rancher",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903866160115:security-group/sg-082892a15205298a9",
            "description": "Security Group Kubernetes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082892a15205298a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acesso 80",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_k8s",
            "name_prefix": "",
            "owner_id": "903866160115",
            "revoke_rules_on_delete": false,
            "tags": {
              "Ambiente": "PROD",
              "CR": "XXXXXXXXXXXXXX",
              "Name": "Security Group Kubernetes",
              "Onwer": "xxxxxx",
              "Projeto": "Plataforma Rancher"
            },
            "timeouts": null,
            "vpc_id": "vpc-9d5bd9e0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-rancher-id",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903866160115:security-group/sg-0d45b808cf220a7f1",
            "description": "All Traffic Security Group Kubernetes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d45b808cf220a7f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SG Acesso 6443",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_k8s_id",
            "name_prefix": "",
            "owner_id": "903866160115",
            "revoke_rules_on_delete": false,
            "tags": {
              "Ambiente": "PROD",
              "CR": "XXXXXXXXXXXXXX",
              "Name": "All Traffic Security Group Kubernetes",
              "Onwer": "xxxxxx",
              "Projeto": "Plataforma Rancher"
            },
            "timeouts": null,
            "vpc_id": "vpc-9d5bd9e0"
          }
        }
      ]
    }
  ]
}